updated for windows version